src/main/webapp/css/myStyle.css
#hiddenSelect {
    display: none;
    position: absolute;
    border: 1px solid #1E90FF;
    width: 100%;
    box-sizing: border-box;
    background-color: white;
    z-index: 1010;
}

#result {
    border-radius: 0;
    height: 2.25em;
    padding: 6px 10px;
    color: #000000;
}

#searchInput {
    width: 100%;
    box-sizing: border-box;
    border-radius: 0 !important;
    outline: none;
    padding: 0 10px !important;
}

#newSelectDiv {
    width: 32em;
    box-sizing: border-box;
    cursor: pointer;
    position: relative;
    background-color: white;
}

#newSelectDiv:after {
    content:'';
    width: 0;
    height: 0;
    display: inline-block;
    border-top: 6px solid #000000;
    border-left: 2.5px solid transparent;
    border-right: 2.5px solid transparent;
    position: absolute;
    right: 6px;
    top: 15px;
}

#generatedUl {
    list-style: none;
    padding: 0;
    margin: 0;
    color: #000000;
    max-height: 17em;
    overflow: auto;
}

#generatedUl li {
    cursor: pointer;
    padding: 0 10px;
}

#generatedUl li:hover {
    background: #1E90FF;
    color: #ffffff;
}

